<resources>
    <string name="app_name">TravelGURU</string>
    <string name="title_hint">Deal title</string>
    <string name="price_hint">Price (number only)</string>
    <string name="description_hint">Description</string>
    <string name="save_menu">Save</string>
    <string name="upload_image">Upload Image</string>
    <string name="dollar_sign">$</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="trips">TRIPS</string>
    <string name="add_picture">add picture</string>
    <string name="buy">Buy</string>
    <string name="change_username">Change username</string>
    <string name="my_trips">my trips</string>
    <string name="textview">TextView</string>
    <string name="buy_offers">Buy offers</string>
    <string name="todo">TODO</string>
    <string name="add_username">Add username</string>
    <string name="submit">Submit</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="add_picture2">Add picture</string>
    <string name="change_password">change password</string>
    <string name="enter_username">Enter username</string>
    <string name="login">Login</string>
    <string name="title_of_app">title</string>
    <string name="trips_offers">Trips</string>
    <string name="delete_picture">delete picture</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="deal_bought">Deal bought</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="change_user_name">Change user name</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="choose_username">Choose username</string>
    <string name="delete">Delete</string>
    <string name="add_comment">Add comment</string>
    <string name="add_review">Add review</string>
    <string name="see_comments">See comments</string>
    <string name="trips_tt">Trips</string>
    <string name="change_photo">Change photo</string>
    <string name="nickname">This could be your first name or a nickname.\nIt\'s how you\'ll appear on TravelGURU.</string>
    <string name="tell_us_what_you_loved">Tell us what you loved</string>

</resources>