<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="134dp"
        android:layout_height="142dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fui_ic_anonymous_white_24dp"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/go_to_offers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_offers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

    <TextView
        android:id="@+id/say_hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/my_trips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_trips"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_to_offers" />

    <Button
        android:id="@+id/change_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_trips" />
</androidx.constraintlayout.widget.ConstraintLayout>